--- a/templates/index.html
+++ b/templates/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" , href="/static/css/main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.talwindcss.com"></script>
     <script src="https://unpkg.com/htmx.org@1.9.11"></script>
     <title>Document</title>
 </head>
 <body>
+    <h1> Website Under Development</h1>
     
 </body>
 </html>
