--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,7 +1,7 @@
 h1 {
     text-align: center;
-    font-size: large;
+    font-size: 500px;
     font-style: normal;
     font-weight: bold;
-    color: chartreuse;
+    color: red;
 }
